--- a/authentication-service/applications/app-service/src/main/resources/application.yaml
+++ b/authentication-service/applications/app-service/src/main/resources/application.yaml
@@ -22,3 +22,7 @@ management:
         enabled: true
 cors:
   allowed-origins: "http://localhost:4200,http://localhost:8080"
+
+routes:
+  paths:
+    users: "/api/v1/usuarios"
