--- a/authentication-service/infrastructure/entry-points/reactive-web/build.gradle
+++ b/authentication-service/infrastructure/entry-points/reactive-web/build.gradle
@@ -1,8 +1,8 @@
 dependencies {
     implementation project(':usecase')
     implementation project(':model')
+    implementation project(':user-validation')
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'io.micrometer:micrometer-registry-prometheus'
 }
