--- a/authentication-service/infrastructure/entry-points/reactive-web/build.gradle
+++ b/authentication-service/infrastructure/entry-points/reactive-web/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     implementation project(':usecase')
     implementation project(':model')
+    implementation project(':shared-dto')
     implementation project(':user-validation')
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
