--- a/authentication-service/settings.gradle
+++ b/authentication-service/settings.gradle
@@ -26,3 +26,5 @@ include ':reactive-web'
 project(':reactive-web').projectDir = file('./infrastructure/entry-points/reactive-web')
 include ':user-validation'
 project(':user-validation').projectDir = file('./infrastructure/helpers/user-validation')
+include ':shared-dto'
+project(':shared-dto').projectDir = file('./infrastructure/shared-dto/dto')
